SSC-1138 - fix logo alignment

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-header.less
@@ -15,6 +15,7 @@
     &__inner {
         height: 60px;
         display: table-cell;
+        padding-left: 5px;
         vertical-align: middle;
     }
     &__logo {
