--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/general.less
@@ -4,7 +4,7 @@
 .container {
     font-family: @f-opensans;
     width: auto;
-    max-width: 930px;
+    max-width: 960px;
 }
 
 body {
